@@ -32,13 +32,13 @@ Channel Action
 XP_TE_CHANACTION
 pevt_chanaction_help
 %C18*$t$1%O $2
-2
+3
 
 Channel Action Hilight
 XP_TE_HCHANACTION
 pevt_chanaction_help
 %C21*%O$t%C21%B$1%O%C21 $2
-2
+3
 
 Channel Ban
 XP_TE_CHANBAN
